--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 tqdm>=4.64.0
 torch>=2.0.0
 transformers>=4.30.0
-datasets>=2.12.0 
+datasets>=2.12.0
+funasr>=0.10.0
+pathlib2>=2.3.7
+typing-extensions>=4.0.0 
