--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ transformers>=4.30.0
 datasets>=2.12.0
 funasr>=0.10.0
 pathlib2>=2.3.7
-typing-extensions>=4.0.0 
+typing-extensions>=4.0.0
+moviepy>=1.0.3 
