--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,6 @@ datasets>=2.12.0
 funasr>=0.10.0
 pathlib2>=2.3.7
 typing-extensions>=4.0.0
-moviepy>=1.0.3 
+moviepy>=1.0.3
+librosa>=0.10.0
+soundfile>=0.12.0 
